# cmakefmt

./: .cmake_format  .gitignore  CMakeLists.txt  cmakefmt.js  cmakefmt.wasm  config.c  config.h  formatter.c  formatter.h  lexer.c  lexer.h  main.c  parser.c  parser.h
.github/workflows/: ci.yml  deploy.yml
demo/: app.js  index.html  wasm_main.c
tests/: run_dump_test.cmake  run_test.cmake
tests/AlignArguments/: .cmake_format  expected.cmake  input.cmake
tests/AlignOptions/: .cmake_format  expected.cmake  input.cmake
tests/AlwaysBreakAfterFirstArgument/: .cmake_format  expected.cmake  input.cmake
tests/BreakBeforeKeywordArgument/: .cmake_format  expected.cmake
tests/ClosingParensOnNewLine/: .cmake_format  expected.cmake  input.cmake
tests/ClosingParensOnNewLineFalse/: .cmake_format  expected.cmake  input.cmake
tests/DumpConfig/: expected.yml
tests/IndentWidth/: expected.cmake  input.cmake
tests/KeepShortStatementOnSameLine/: .cmake_format  expected.cmake  input.cmake
tests/SpaceBeforeParens/: .cmake_format  expected.cmake  input.cmake
tests/SpacesInParens/: .cmake_format  expected.cmake  input.cmake
tests/StressTestDocs/: .cmake_format  expected.cmake  input.cmake
tests/UseTab/: .cmake_format  expected.cmake  input.cmake
